[gd_scene load_steps=15 format=2]

[ext_resource path="res://EnemyRelated/EnemyFactionPassives/Type_Morphers/GUI/MorphSingleSelectionPane/Assets/MorphSingleSelectionPane_Border_9x9.png" type="Texture" id=1]
[ext_resource path="res://EnemyRelated/EnemyFactionPassives/Type_Morphers/GUI/MorphSingleSelectionPane/MorphSingleSelectionPane.gd" type="Script" id=2]
[ext_resource path="res://EnemyRelated/EnemyFactionPassives/Type_Morphers/GUI/MorphSingleSelectionPane/Assets/MorphSingleSelectionPane_BanButton_Highlighted.png" type="Texture" id=3]
[ext_resource path="res://EnemyRelated/EnemyFactionPassives/Type_Morphers/_Morphs/Assets/Morph_TestIcon_45x45.png" type="Texture" id=4]
[ext_resource path="res://EnemyRelated/EnemyFactionPassives/Type_Morphers/GUI/MorphSingleSelectionPane/Assets/MorphSingleSelectionPane_BanButton_Normal.png" type="Texture" id=5]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://GameHUDRelated/Tooltips/TooltipBodyConstructors/TooltipBody.tscn" type="PackedScene" id=7]
[ext_resource path="res://MapsRelated/MapList/Map_Mesa/BehaviorSpecific/GUI_Assets/DarkGrayLine_4x4.png" type="Texture" id=8]
[ext_resource path="res://MapsRelated/MapList/Map_Mesa/BehaviorSpecific/GUI_Assets/BrownBackground_4x4.png" type="Texture" id=9]
[ext_resource path="res://EnemyRelated/EnemyFactionPassives/Type_Morphers/GUI/MorphSingleSelectionPane/Assets/MorphSingleSelectionPane_ReAddButton_Highlighted.png" type="Texture" id=10]
[ext_resource path="res://EnemyRelated/EnemyFactionPassives/Type_Morphers/GUI/MorphSingleSelectionPane/Assets/MorphSingleSelectionPane_ReAddButton_Normal.png" type="Texture" id=11]
[ext_resource path="res://EnemyRelated/EnemyFactionPassives/Type_Morphers/GUI/MorphSingleSelectionPane/Assets/MorphSingleSelectionPane_WhiteBackground_2x2.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_color = Color( 0.866667, 0.866667, 0.866667, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 14
outline_color = Color( 0.866667, 0.866667, 0.866667, 1 )
font_data = ExtResource( 6 )

[node name="MorphSingleSelectionPane" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 280, 400 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 280.0
margin_bottom = 400.0
custom_constants/separation = 0

[node name="MainBodyContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 280.0
margin_bottom = 363.0
rect_min_size = Vector2( 0, 363 )

[node name="Background" type="TextureRect" parent="VBoxContainer/MainBodyContainer"]
margin_right = 280.0
margin_bottom = 363.0
texture = ExtResource( 12 )
stretch_mode = 2

[node name="Left" type="TextureRect" parent="VBoxContainer/MainBodyContainer"]
margin_right = 9.0
margin_bottom = 363.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 1 )
stretch_mode = 2

[node name="Right" type="TextureRect" parent="VBoxContainer/MainBodyContainer"]
margin_left = 271.0
margin_right = 280.0
margin_bottom = 363.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 1 )
stretch_mode = 2

[node name="Up" type="TextureRect" parent="VBoxContainer/MainBodyContainer"]
margin_right = 280.0
margin_bottom = 9.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 1 )
stretch_mode = 2

[node name="Down" type="TextureRect" parent="VBoxContainer/MainBodyContainer"]
margin_top = 354.0
margin_right = 280.0
margin_bottom = 363.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 1 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainBodyContainer"]
margin_right = 280.0
margin_bottom = 363.0
custom_constants/margin_right = 14
custom_constants/margin_top = 20
custom_constants/margin_left = 14
custom_constants/margin_bottom = 14

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MainBodyContainer/MarginContainer"]
margin_left = 14.0
margin_top = 20.0
margin_right = 266.0
margin_bottom = 349.0
custom_constants/separation = 8

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainBodyContainer/MarginContainer/VBoxContainer"]
margin_left = 79.0
margin_right = 173.0
margin_bottom = 45.0
size_flags_horizontal = 6

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MainBodyContainer/MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 94.0
margin_bottom = 45.0

[node name="EnemyIcon" type="TextureRect" parent="VBoxContainer/MainBodyContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 45.0
margin_bottom = 45.0
texture = ExtResource( 4 )

[node name="MorphIcon" type="TextureRect" parent="VBoxContainer/MainBodyContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 49.0
margin_right = 94.0
margin_bottom = 45.0
texture = ExtResource( 4 )

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/MainBodyContainer/MarginContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 252.0
margin_bottom = 74.0

[node name="MorphNameLabel" type="Label" parent="VBoxContainer/MainBodyContainer/MarginContainer/VBoxContainer/MarginContainer2"]
margin_right = 252.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 1 )
text = "Name"
align = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/MainBodyContainer/MarginContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 252.0
margin_bottom = 190.0
size_flags_vertical = 3

[node name="Background" type="TextureRect" parent="VBoxContainer/MainBodyContainer/MarginContainer/VBoxContainer/MarginContainer3"]
margin_right = 252.0
margin_bottom = 108.0
mouse_filter = 2
texture = ExtResource( 9 )
stretch_mode = 2

[node name="Left" type="TextureRect" parent="VBoxContainer/MainBodyContainer/MarginContainer/VBoxContainer/MarginContainer3"]
margin_right = 4.0
margin_bottom = 108.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 8 )
stretch_mode = 2

[node name="Right" type="TextureRect" parent="VBoxContainer/MainBodyContainer/MarginContainer/VBoxContainer/MarginContainer3"]
margin_left = 248.0
margin_right = 252.0
margin_bottom = 108.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 8 )
stretch_mode = 2

[node name="Up" type="TextureRect" parent="VBoxContainer/MainBodyContainer/MarginContainer/VBoxContainer/MarginContainer3"]
margin_right = 252.0
margin_bottom = 4.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 8 )
stretch_mode = 2

[node name="Down" type="TextureRect" parent="VBoxContainer/MainBodyContainer/MarginContainer/VBoxContainer/MarginContainer3"]
margin_top = 104.0
margin_right = 252.0
margin_bottom = 108.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 8 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainBodyContainer/MarginContainer/VBoxContainer/MarginContainer3"]
margin_right = 252.0
margin_bottom = 108.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="TooltipBodyNormal" parent="VBoxContainer/MainBodyContainer/MarginContainer/VBoxContainer/MarginContainer3/MarginContainer" instance=ExtResource( 7 )]
margin_left = 8.0
margin_top = 8.0
margin_right = 244.0
margin_bottom = 100.0
default_font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
default_font_size = 14

[node name="ForWildcardLabel" type="Label" parent="VBoxContainer/MainBodyContainer/MarginContainer/VBoxContainer"]
margin_top = 198.0
margin_right = 252.0
margin_bottom = 213.0
custom_fonts/font = SubResource( 2 )
text = "For Wildcard:"

[node name="WildcardDescContainer" type="MarginContainer" parent="VBoxContainer/MainBodyContainer/MarginContainer/VBoxContainer"]
margin_top = 221.0
margin_right = 252.0
margin_bottom = 329.0
size_flags_vertical = 3

[node name="Background" type="TextureRect" parent="VBoxContainer/MainBodyContainer/MarginContainer/VBoxContainer/WildcardDescContainer"]
margin_right = 252.0
margin_bottom = 108.0
mouse_filter = 2
texture = ExtResource( 9 )
stretch_mode = 2

[node name="Left" type="TextureRect" parent="VBoxContainer/MainBodyContainer/MarginContainer/VBoxContainer/WildcardDescContainer"]
margin_right = 4.0
margin_bottom = 108.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 8 )
stretch_mode = 2

[node name="Right" type="TextureRect" parent="VBoxContainer/MainBodyContainer/MarginContainer/VBoxContainer/WildcardDescContainer"]
margin_left = 248.0
margin_right = 252.0
margin_bottom = 108.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 8 )
stretch_mode = 2

[node name="Up" type="TextureRect" parent="VBoxContainer/MainBodyContainer/MarginContainer/VBoxContainer/WildcardDescContainer"]
margin_right = 252.0
margin_bottom = 4.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 8 )
stretch_mode = 2

[node name="Down" type="TextureRect" parent="VBoxContainer/MainBodyContainer/MarginContainer/VBoxContainer/WildcardDescContainer"]
margin_top = 104.0
margin_right = 252.0
margin_bottom = 108.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 8 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MainBodyContainer/MarginContainer/VBoxContainer/WildcardDescContainer"]
margin_right = 252.0
margin_bottom = 108.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="TooltipBodyWildcard" parent="VBoxContainer/MainBodyContainer/MarginContainer/VBoxContainer/WildcardDescContainer/MarginContainer" instance=ExtResource( 7 )]
margin_left = 8.0
margin_top = 8.0
margin_right = 244.0
margin_bottom = 100.0
default_font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
default_font_size = 14

[node name="CancelButton" type="TextureButton" parent="VBoxContainer"]
margin_left = 110.0
margin_top = 363.0
margin_right = 169.0
margin_bottom = 400.0
size_flags_horizontal = 6
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 3 )

[node name="ReAddButton" type="TextureButton" parent="VBoxContainer"]
visible = false
margin_left = 120.0
margin_top = 375.0
margin_right = 159.0
margin_bottom = 400.0
size_flags_horizontal = 6
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 10 )

[connection signal="pressed" from="VBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ReAddButton" to="." method="_on_ReAddButton_pressed"]
